--- a/images/index.html
+++ b/images/index.html
@@ -7,20 +7,7 @@
     <title> BTS - Página Principal</title>
 </head>
 <body>
-    <!-- Cabeçalho -->
-    <header>
-        <a href="index.html">
-            <img src="imagens" width="500" alt="Logo do Artista">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="filme.html">Filme</a></li>
-                <li><a href="livro.html">Livro</a></li>
-                <li><a href="musica.html">Música</a></li>
-            </ul>
-        </nav>
-    </header>
+    
 
     <!-- Conteúdo Principal -->
     <main>
@@ -44,19 +31,21 @@
         
         <h2>Lançamentos</h2>
         <div>
-            <a href="filme.html"><img src="images/filme.jpg" alt="Pôster do Filme"></a>
-            <a href="livro.html"><img src="images/livro.jpg" alt="Capa do Livro"></a>
-            <a href="musica.html"><img src="images/musica.jpg" alt="Capa do Álbum"></a>
+            <a href="documentario.html"><img src="bts-filme.png" width="200" alt="Pôster do Documentario"></a>
+            <br>
+            <a href="livro.html"><img src="btslivro.jpg" width="200" alt="Capa do Livro"></a>
+            <br>
+            <a href="musica.html"><img src="album persona.jpg" width="200" alt="Capa do Álbum"></a>
         </div>
     </main>
 
     <!-- Rodapé -->
     <footer>
-        <p>Contato: <a href="mailto:artista@email.com">artista@email.com</a></p>
+        <p>Contato: <a href="mailto:">bighit@ibighit.com</a>bighitofficial@email.com</p>
         <div>
-            <a href="https://instagram.com"><img src="images/instagram.png" alt="Instagram"></a>
-            <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="https://youtube.com"><img src="images/youtube.png" alt="YouTube"></a>
+            <a href="instagram.com/bts.bighitofficial"><img src="Instagram.webp" width="50"  alt="Instagram"></a>
+            <a href="facebook.com/bangtan.official"><img src="face.jpeg" width="50" alt="Facebook"></a>
+            <a href="bts.ibighit.com"><img src="youtube.jpg" width="50" alt="YouTube"></a>
         </div>
     </footer>
 </body>
