--- a/images/livro.html
+++ b/images/livro.html
@@ -14,8 +14,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="filme.html">Filme</a></li>
-                <li><a href="livro.html">Livro</a></li>
+                <li><a href="filme.html">Filme</a></li>               
                 <li><a href="musica.html">Música</a></li>
             </ul>
         </nav>
@@ -23,30 +22,31 @@
 
     <!-- Conteúdo Principal -->
     <main>
-        <h1>Título do Livro</h1>
-        <img src="images/livro.jpg" alt="Capa do Livro">
-        <p><em>Resumo do livro</em>: Descrição breve com algumas palavras em <i>itálico</i>.</p>
-        <p><strong>Gênero:</strong> Ficção, Drama</p>
+        <h1>Beyond the store</h1>
+        <img src="btslivro.jpg" alt="Capa do Livro">
+        <p>"Beyond the Store: BTS" é um livro que explora o impacto e a trajetória do BTS, um dos maiores grupos de K-pop da história.
+             O livro oferece uma visão abrangente sobre a ascensão do grupo, suas estratégias de negócios, e a influência cultural global que conquistaram.</p>
+        <p><h5>Gênero:</h5>O livro é uma análise cultural e de negócios, focando no impacto global do BTS, explorando tanto a trajetória do grupo quanto seu papel na indústria musical e na cultura pop.</p>
 
         <h2>Índice</h2>
         <ol>
-            <li>Capítulo 1
+            <li><h5>Capítulo 1 :</h5>  A Ascensão do BTS
                 <ul>
-                    <li>Subcapítulo 1.1</li>
-                    <li>Subcapítulo 1.2</li>
+                    <li><h5>Subcapítulo 1.1: </h5>Este subcapítulo detalha como os sete integrantes do BTS foram escolhidos e se reuniram sob a agência Big Hit Entertainment. Inclui informações sobre as audições, treinamentos e a formação inicial do grupo.</li>
+                    <li><h5>Subcapítulo 1.2:</h5> Aqui, são discutidos os primeiros lançamentos do BTS e a recepção inicial do público. Explora como o grupo começou a ganhar reconhecimento e a construir uma base de fãs.</li>
                 </ul>
             </li>
-            <li>Capítulo 2</li>
-            <li>Capítulo 3
+            <li><h5>Capítulo 2:</h5> Examina a expansão do BTS além das fronteiras da Coreia do Sul. Aborda as estratégias que contribuíram para o sucesso internacional do grupo, incluindo o uso das redes sociais e o impacto dos lançamentos em mercados estrangeiros.</li>
+            <li><h5>Capítulo 3</h5>
                 <ul>
-                    <li>Subcapítulo 3.1</li>
-                    <li>Subcapítulo 3.2</li>
+                    <li><h5>Subcapítulo 3.1:</h5> Analisa as abordagens inovadoras do BTS para marketing e merchandising. Explora como o grupo utiliza suas plataformas e produtos para se conectar com os fãs e gerar receita.</li>
+                    <li><h5>Subcapítulo 3.2:</h5> Discute o impacto cultural e social do BTS, incluindo seu papel em questões sociais e políticas, e como a mensagem do grupo ressoa com diferentes públicos ao redor do mundo.</li>
                 </ul>
             </li>
-            <li>Capítulo 4</li>
-            <li>Capítulo 5
+            <li><h5>Capítulo 4: </h5>Explora o fenômeno do fandom do BTS, conhecido como ARMY, e como a conexão entre o grupo e seus fãs contribui para o sucesso contínuo. Inclui histórias e testemunhos de fãs ao redor do mundo.</li>
+            <li><h5>Capítulo 5</h5>
                 <ul>
-                    <li>Subcapítulo 5.1</li>
+                    <li><h5>Subcapítulo 5.1:</h5> Aborda os desafios que o grupo pode enfrentar no futuro, incluindo questões de sustentabilidade na indústria musical e as expectativas em torno do próximo capítulo da carreira do BTS.</li>
                 </ul>
             </li>
         </ol>
